packages/ops/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aion-omega
  labels:
    name: aion-omega
    project: aion
